--- a/Uebung7/build.xml
+++ b/Uebung7/build.xml
@@ -3,7 +3,7 @@
 <!-- $Id: $ -->
 
 
-<project name="dh-pv" basedir="." >
+<project name="dhbw-pv" basedir="." >
 
   <property name="src"       value="src" />
   <property name="bin"       value="bin" />
@@ -66,7 +66,7 @@
   <java  jar="${libs}/starter.jar" 
          dir="${bin}"
          fork="true" >
-         <env key="MPJ_HOME" path="/hdd/Coding/JavaLibs/mpj-v0_44" />
+         <env key="MPJ_HOME" path="/hdd/Coding/JavaLibs/mpj-v0_36" />
      <arg line="-np ${np} ${class}" /> 
   </java>
 </target>
